Fix broken layout on card details page

--- a/hsreplaynet/static/styles/card_detail.scss
+++ b/hsreplaynet/static/styles/card_detail.scss
@@ -9,6 +9,12 @@
 		min-height: calc(100vh - 50px);
 		padding-top: 10px;
 		width: calc(100% - 300px);
+		display: flex;
+		flex-direction: column;
+
+		#page-content {
+			flex-grow: 1;
+		}
 
 		> .row {
 			border-bottom: 1px solid $lightgrey;
